<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.lovelyfatbears.thoniorf.alarmsmscommander.MainActivity"
    tools:layout_editor_absoluteY="25dp"
    tools:layout_editor_absoluteX="0dp">

    <EditText
        android:id="@+id/edittxt_passwd"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_centerHorizontal="true"
        android:hint="@string/enter_alarm_password"
        android:inputType="text"
        android:textColor="@android:color/darker_gray"
        android:textColorHint="@android:color/secondary_text_dark"
        app:layout_constraintTop_toTopOf="@+id/toolbar"
        android:layout_marginTop="128dp"
        android:layout_marginLeft="100dp"
        android:layout_marginStart="100dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <EditText
        android:id="@+id/edittxt_phone"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_centerHorizontal="true"
        android:hint="@string/enter_alarm_number"
        android:inputType="phone"
        android:textColor="@android:color/darker_gray"
        android:textColorHint="@android:color/secondary_text_dark"
        app:layout_constraintTop_toTopOf="@+id/toolbar"
        android:layout_marginTop="72dp"
        android:layout_marginLeft="108dp"
        android:layout_marginStart="108dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Button
        android:id="@+id/btn_arm"
        android:layout_width="128dp"
        android:layout_height="72dp"
        android:layout_marginLeft="128dp"
        android:layout_marginStart="128dp"
        android:layout_marginTop="260dp"
        android:drawableLeft="@mipmap/ic_lock_black_48dp"
        android:drawableStart="@mipmap/ic_lock_black_48dp"
        android:text="@string/arm"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@+id/toolbar" />

    <Button
        android:id="@+id/btn_status"
        android:layout_width="128dp"
        android:layout_height="wrap_content"
        android:drawableLeft="@mipmap/ic_info_black_48dp"
        android:drawableStart="@mipmap/ic_info_black_48dp"
        android:text="@string/status"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@+id/btn_disarm"
        android:layout_marginLeft="128dp"
        android:layout_marginStart="128dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Button
        android:id="@+id/btn_disarm"
        android:layout_width="128dp"
        android:layout_height="0dp"
        android:layout_marginTop="32dp"
        android:drawableLeft="@mipmap/ic_lock_open_black_48dp"
        android:drawableStart="@mipmap/ic_lock_open_black_48dp"
        android:text="@string/disarm"
        app:layout_constraintTop_toBottomOf="@+id/btn_arm"
        android:layout_marginLeft="128dp"
        android:layout_marginStart="128dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <CheckBox
        android:id="@+id/chb_remember"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="@string/remember"
        android:layout_marginTop="128dp"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        android:layout_marginLeft="136dp"
        android:layout_marginStart="136dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimaryDark"
        android:minHeight="?attr/actionBarSize"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="0dp"
        android:layout_marginStart="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="0dp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="4dp"
        android:text="@string/app_name"
        android:textColor="?attr/colorPrimary"
        android:textSize="22sp"
        android:typeface="normal"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.727"
        android:layout_marginStart="16dp" />

    <ImageButton
        android:id="@+id/imagebtn_call"
        style="@style/Base.Theme.AppCompat"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:background="?attr/colorPrimaryDark"
        android:contentDescription="@string/call_alarm"
        app:layout_constraintTop_toTopOf="@+id/toolbar"
        app:srcCompat="@mipmap/ic_phone_black_48dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="@+id/toolbar" />

</android.support.constraint.ConstraintLayout>
